Direct Connection to Session Pooler en Supabase

--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,2 +1,2 @@
 
-DATABASE_URL=postgresql://postgres:Saladillo2521@db.vasvpsjslvjbfnyjjufx.supabase.co:5432/postgres
+DATABASE_URL=postgresql://postgres.vasvpsjslvjbfnyjjufx:Saladillo2521@aws-0-us-west-1.pooler.supabase.com:5432/postgres
