--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -7,6 +7,7 @@
     "express": "^5.1.0",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
+    "nodemailer": "^6.10.1",
     "pg": "^8.15.1"
   }
 }
